PORV all lots nodes columns without scaling

--- a/notebooks/averaging_data/PhreaticLevel/28-weeks_January-12_August-03_2018/01-bgarcial-phreatic_level_generating_lots-nodes-values_per-day.ipynb
+++ b/notebooks/averaging_data/PhreaticLevel/28-weeks_January-12_August-03_2018/01-bgarcial-phreatic_level_generating_lots-nodes-values_per-day.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
        "[5 rows x 76 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +490,7 @@
        "[5 rows x 76 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -725,7 +725,7 @@
        "[5 rows x 76 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -755,7 +755,7 @@
        "True"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -789,7 +789,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -922,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -956,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -973,98 +973,98 @@
     "    if(i==2):        \n",
     "        # To N1\n",
     "        columns_to_export_L2N1 = ['Fecha', 'Hora', 'PORVL{}N{}'.format(i,i-1)]\n",
-    "        partial_dataframe_to_csv(\"../../../../data/interim/PhreaticLevel/28-weeks_January-12_August-03_2018/PhreaticLevel_By_Lots-Nodes/PORVL{}N{}_portion.csv\".format(i, i-1), phreatic_level_28w_df, columns_to_export_L2N1)\n",
+    "        partial_dataframe_to_csv(\"../../../../data/interim/PhreaticLevel/28-weeks_January-12_August-03_2018/1.PhreaticLevel_By_Lots-Nodes/PORVL{}N{}_portion.csv\".format(i, i-1), phreatic_level_28w_df, columns_to_export_L2N1)\n",
     "        \n",
     "        # To N2\n",
     "        columns_to_export = ['Fecha.{}'.format(i-1), 'Hora.{}'.format(i-1), 'PORVL{}N{}'.format(i,i)]\n",
-    "        partial_dataframe_to_csv(\"../../../../data/interim/PhreaticLevel/28-weeks_January-12_August-03_2018/PhreaticLevel_By_Lots-Nodes/PORVL2N{}_portion.csv\".format(i), phreatic_level_28w_df, columns_to_export)\n",
+    "        partial_dataframe_to_csv(\"../../../../data/interim/PhreaticLevel/28-weeks_January-12_August-03_2018/1.PhreaticLevel_By_Lots-Nodes/PORVL2N{}_portion.csv\".format(i), phreatic_level_28w_df, columns_to_export)\n",
     "        \n",
     "    elif(i==4):\n",
     "        columns_to_export = ['Fecha.{}'.format(i-2), 'Hora.{}'.format(i-2), 'PORVL{}N{}'.format(i,i-3)]\n",
-    "        partial_dataframe_to_csv(\"../../../../data/interim/PhreaticLevel/28-weeks_January-12_August-03_2018/PhreaticLevel_By_Lots-Nodes/PORVL{}N{}_portion.csv\".format(i,i-3), phreatic_level_28w_df, columns_to_export)\n",
+    "        partial_dataframe_to_csv(\"../../../../data/interim/PhreaticLevel/28-weeks_January-12_August-03_2018/1.PhreaticLevel_By_Lots-Nodes/PORVL{}N{}_portion.csv\".format(i,i-3), phreatic_level_28w_df, columns_to_export)\n",
     "        \n",
     "    elif(i==5):\n",
     "        columns_to_export = ['Fecha.{}'.format(i-2), 'Hora.{}'.format(i-2), 'PORVL{}N{}'.format(i,i-4)]\n",
-    "        partial_dataframe_to_csv(\"../../../../data/interim/PhreaticLevel/28-weeks_January-12_August-03_2018/PhreaticLevel_By_Lots-Nodes/PORVL{}N{}_portion.csv\".format(i,i-4), phreatic_level_28w_df, columns_to_export)\n",
+    "        partial_dataframe_to_csv(\"../../../../data/interim/PhreaticLevel/28-weeks_January-12_August-03_2018/1.PhreaticLevel_By_Lots-Nodes/PORVL{}N{}_portion.csv\".format(i,i-4), phreatic_level_28w_df, columns_to_export)\n",
     "    \n",
     "    elif(i==6):\n",
     "        columns_to_export = ['Fecha.{}'.format(i-2), 'Hora.{}'.format(i-2), 'PORVL{}N{}'.format(i,i-5)]\n",
-    "        partial_dataframe_to_csv(\"../../../../data/interim/PhreaticLevel/28-weeks_January-12_August-03_2018/PhreaticLevel_By_Lots-Nodes/PORVL{}N{}_portion.csv\".format(i,i-5), phreatic_level_28w_df, columns_to_export)\n",
+    "        partial_dataframe_to_csv(\"../../../../data/interim/PhreaticLevel/28-weeks_January-12_August-03_2018/1.PhreaticLevel_By_Lots-Nodes/PORVL{}N{}_portion.csv\".format(i,i-5), phreatic_level_28w_df, columns_to_export)\n",
     "    \n",
     "    elif(i==7):\n",
     "        columns_to_export = ['Fecha.{}'.format(i-2), 'Hora.{}'.format(i-2), 'PORVL{}N{}'.format(i,i-6)]\n",
-    "        partial_dataframe_to_csv(\"../../../../data/interim/PhreaticLevel/28-weeks_January-12_August-03_2018/PhreaticLevel_By_Lots-Nodes/PORVL{}N{}_portion.csv\".format(i,i-6), phreatic_level_28w_df, columns_to_export)\n",
+    "        partial_dataframe_to_csv(\"../../../../data/interim/PhreaticLevel/28-weeks_January-12_August-03_2018/1.PhreaticLevel_By_Lots-Nodes/PORVL{}N{}_portion.csv\".format(i,i-6), phreatic_level_28w_df, columns_to_export)\n",
     "    \n",
     "    elif(i==8):\n",
     "        columns_to_export = ['Fecha.{}'.format(i-2), 'Hora.{}'.format(i-2), 'PORVL{}N{}'.format(i,i-7)]\n",
-    "        partial_dataframe_to_csv(\"../../../../data/interim/PhreaticLevel/28-weeks_January-12_August-03_2018/PhreaticLevel_By_Lots-Nodes/PORVL{}N{}_portion.csv\".format(i,i-7), phreatic_level_28w_df, columns_to_export)\n",
+    "        partial_dataframe_to_csv(\"../../../../data/interim/PhreaticLevel/28-weeks_January-12_August-03_2018/1.PhreaticLevel_By_Lots-Nodes/PORVL{}N{}_portion.csv\".format(i,i-7), phreatic_level_28w_df, columns_to_export)\n",
     "    \n",
     "    elif(i==9):\n",
     "        columns_to_export = ['Fecha.{}'.format(i-2), 'Hora.{}'.format(i-2), 'PORVL{}N{}'.format(i,i-8)]\n",
-    "        partial_dataframe_to_csv(\"../../../../data/interim/PhreaticLevel/28-weeks_January-12_August-03_2018/PhreaticLevel_By_Lots-Nodes/PORVL{}N{}_portion.csv\".format(i,i-8), phreatic_level_28w_df, columns_to_export)\n",
+    "        partial_dataframe_to_csv(\"../../../../data/interim/PhreaticLevel/28-weeks_January-12_August-03_2018/1.PhreaticLevel_By_Lots-Nodes/PORVL{}N{}_portion.csv\".format(i,i-8), phreatic_level_28w_df, columns_to_export)\n",
     "    \n",
     "    elif(i==10):\n",
     "        columns_to_export = ['Fecha.{}'.format(i-2), 'Hora.{}'.format(i-2), 'PORVL{}N{}'.format(i,i-9)]\n",
-    "        partial_dataframe_to_csv(\"../../../../data/interim/PhreaticLevel/28-weeks_January-12_August-03_2018/PhreaticLevel_By_Lots-Nodes/PORVL{}N{}_portion.csv\".format(i,i-9), phreatic_level_28w_df, columns_to_export)\n",
+    "        partial_dataframe_to_csv(\"../../../../data/interim/PhreaticLevel/28-weeks_January-12_August-03_2018/1.PhreaticLevel_By_Lots-Nodes/PORVL{}N{}_portion.csv\".format(i,i-9), phreatic_level_28w_df, columns_to_export)\n",
     "    \n",
     "    elif(i==13):\n",
     "        columns_to_export = ['Fecha.{}'.format(i-4), 'Hora.{}'.format(i-4), 'PORVL{}N{}'.format(i,i-12)]\n",
-    "        partial_dataframe_to_csv(\"../../../../data/interim/PhreaticLevel/28-weeks_January-12_August-03_2018/PhreaticLevel_By_Lots-Nodes/PORVL{}N{}_portion.csv\".format(i,i-12), phreatic_level_28w_df, columns_to_export)\n",
+    "        partial_dataframe_to_csv(\"../../../../data/interim/PhreaticLevel/28-weeks_January-12_August-03_2018/1.PhreaticLevel_By_Lots-Nodes/PORVL{}N{}_portion.csv\".format(i,i-12), phreatic_level_28w_df, columns_to_export)\n",
     "    \n",
     "    elif(i==14):\n",
     "        columns_to_export = ['Fecha.{}'.format(i-4), 'Hora.{}'.format(i-4), 'PORVL{}N{}'.format(i,i-13)]\n",
-    "        partial_dataframe_to_csv(\"../../../../data/interim/PhreaticLevel/28-weeks_January-12_August-03_2018/PhreaticLevel_By_Lots-Nodes/PORVL{}N{}_portion.csv\".format(i,i-13), phreatic_level_28w_df, columns_to_export)\n",
+    "        partial_dataframe_to_csv(\"../../../../data/interim/PhreaticLevel/28-weeks_January-12_August-03_2018/1.PhreaticLevel_By_Lots-Nodes/PORVL{}N{}_portion.csv\".format(i,i-13), phreatic_level_28w_df, columns_to_export)\n",
     "    \n",
     "    elif(i==15):\n",
     "        columns_to_export = ['Fecha.{}'.format(i-4), 'Hora.{}'.format(i-4), 'PORVL{}N{}'.format(i,i-14)]\n",
-    "        partial_dataframe_to_csv(\"../../../../data/interim/PhreaticLevel/28-weeks_January-12_August-03_2018/PhreaticLevel_By_Lots-Nodes/PORVL{}N{}_portion.csv\".format(i,i-14), phreatic_level_28w_df, columns_to_export)\n",
+    "        partial_dataframe_to_csv(\"../../../../data/interim/PhreaticLevel/28-weeks_January-12_August-03_2018/1.PhreaticLevel_By_Lots-Nodes/PORVL{}N{}_portion.csv\".format(i,i-14), phreatic_level_28w_df, columns_to_export)\n",
     "    \n",
     "    elif(i==16):\n",
     "        # To N1\n",
     "        columns_to_export = ['Fecha.{}'.format(i-4), 'Hora.{}'.format(i-4), 'PORVL{}N{}'.format(i,i-15)]\n",
-    "        partial_dataframe_to_csv(\"../../../../data/interim/PhreaticLevel/28-weeks_January-12_August-03_2018/PhreaticLevel_By_Lots-Nodes/PORVL{}N{}_portion.csv\".format(i,i-15), phreatic_level_28w_df, columns_to_export)\n",
+    "        partial_dataframe_to_csv(\"../../../../data/interim/PhreaticLevel/28-weeks_January-12_August-03_2018/1.PhreaticLevel_By_Lots-Nodes/PORVL{}N{}_portion.csv\".format(i,i-15), phreatic_level_28w_df, columns_to_export)\n",
     "        # To N2\n",
     "        columns_to_export_n2 = ['Fecha.{}'.format(i-3), 'Hora.{}'.format(i-3), 'PORVL{}N{}'.format(i,i-14)]\n",
-    "        partial_dataframe_to_csv(\"../../../../data/interim/PhreaticLevel/28-weeks_January-12_August-03_2018/PhreaticLevel_By_Lots-Nodes/PORVL{}N{}_portion.csv\".format(i,i-14), phreatic_level_28w_df, columns_to_export_n2)\n",
+    "        partial_dataframe_to_csv(\"../../../../data/interim/PhreaticLevel/28-weeks_January-12_August-03_2018/1.PhreaticLevel_By_Lots-Nodes/PORVL{}N{}_portion.csv\".format(i,i-14), phreatic_level_28w_df, columns_to_export_n2)\n",
     "    \n",
     "    elif(i==18):\n",
     "        # To N1\n",
     "        columns_to_export = ['Fecha.{}'.format(i-4), 'Hora.{}'.format(i-4), 'PORVL{}N{}'.format(i,i-17)]\n",
-    "        partial_dataframe_to_csv(\"../../../../data/interim/PhreaticLevel/28-weeks_January-12_August-03_2018/PhreaticLevel_By_Lots-Nodes/PORVL{}N{}_portion.csv\".format(i,i-17), phreatic_level_28w_df, columns_to_export)\n",
+    "        partial_dataframe_to_csv(\"../../../../data/interim/PhreaticLevel/28-weeks_January-12_August-03_2018/1.PhreaticLevel_By_Lots-Nodes/PORVL{}N{}_portion.csv\".format(i,i-17), phreatic_level_28w_df, columns_to_export)\n",
     "        # To N2\n",
     "        columns_to_export = ['Fecha.{}'.format(i-3), 'Hora.{}'.format(i-3), 'PORVL{}N{}'.format(i,i-16)]\n",
-    "        partial_dataframe_to_csv(\"../../../../data/interim/PhreaticLevel/28-weeks_January-12_August-03_2018/PhreaticLevel_By_Lots-Nodes/PORVL{}N{}_portion.csv\".format(i,i-16), phreatic_level_28w_df, columns_to_export)\n",
+    "        partial_dataframe_to_csv(\"../../../../data/interim/PhreaticLevel/28-weeks_January-12_August-03_2018/1.PhreaticLevel_By_Lots-Nodes/PORVL{}N{}_portion.csv\".format(i,i-16), phreatic_level_28w_df, columns_to_export)\n",
     "        # To N3\n",
     "        columns_to_export = ['Fecha.{}'.format(i-2), 'Hora.{}'.format(i-2), 'PORVL{}N{}'.format(i,i-15)]\n",
-    "        partial_dataframe_to_csv(\"../../../../data/interim/PhreaticLevel/28-weeks_January-12_August-03_2018/PhreaticLevel_By_Lots-Nodes/PORVL{}N{}_portion.csv\".format(i,i-15), phreatic_level_28w_df, columns_to_export)\n",
+    "        partial_dataframe_to_csv(\"../../../../data/interim/PhreaticLevel/28-weeks_January-12_August-03_2018/1.PhreaticLevel_By_Lots-Nodes/PORVL{}N{}_portion.csv\".format(i,i-15), phreatic_level_28w_df, columns_to_export)\n",
     "        # To N4\n",
     "        columns_to_export = ['Fecha.{}'.format(i-1), 'Hora.{}'.format(i-1), 'PORVL{}N{}'.format(i,i-14)]\n",
-    "        partial_dataframe_to_csv(\"../../../../data/interim/PhreaticLevel/28-weeks_January-12_August-03_2018/PhreaticLevel_By_Lots-Nodes/PORVL{}N{}_portion.csv\".format(i,i-14), phreatic_level_28w_df, columns_to_export)\n",
+    "        partial_dataframe_to_csv(\"../../../../data/interim/PhreaticLevel/28-weeks_January-12_August-03_2018/1.PhreaticLevel_By_Lots-Nodes/PORVL{}N{}_portion.csv\".format(i,i-14), phreatic_level_28w_df, columns_to_export)\n",
     "    \n",
     "    elif(i==21):\n",
     "        # To N1\n",
     "        columns_to_export = ['Fecha.{}'.format(i-3), 'Hora.{}'.format(i-3), 'PORVL{}N{}'.format(i,i-20)]\n",
-    "        partial_dataframe_to_csv(\"../../../../data/interim/PhreaticLevel/28-weeks_January-12_August-03_2018/PhreaticLevel_By_Lots-Nodes/PORVL{}N{}_portion.csv\".format(i,i-20), phreatic_level_28w_df, columns_to_export)\n",
+    "        partial_dataframe_to_csv(\"../../../../data/interim/PhreaticLevel/28-weeks_January-12_August-03_2018/1.PhreaticLevel_By_Lots-Nodes/PORVL{}N{}_portion.csv\".format(i,i-20), phreatic_level_28w_df, columns_to_export)\n",
     "        # To N2\n",
     "        columns_to_export = ['Fecha.{}'.format(i-2), 'Hora.{}'.format(i-2), 'PORVL{}N{}'.format(i,i-19)]\n",
-    "        partial_dataframe_to_csv(\"../../../../data/interim/PhreaticLevel/28-weeks_January-12_August-03_2018/PhreaticLevel_By_Lots-Nodes/PORVL{}N{}_portion.csv\".format(i,i-19), phreatic_level_28w_df, columns_to_export)\n",
+    "        partial_dataframe_to_csv(\"../../../../data/interim/PhreaticLevel/28-weeks_January-12_August-03_2018/1.PhreaticLevel_By_Lots-Nodes/PORVL{}N{}_portion.csv\".format(i,i-19), phreatic_level_28w_df, columns_to_export)\n",
     "        # To N3\n",
     "        columns_to_export = ['Fecha.{}'.format(i-1), 'Hora.{}'.format(i-1), 'PORVL{}N{}'.format(i,i-18)]\n",
-    "        partial_dataframe_to_csv(\"../../../../data/interim/PhreaticLevel/28-weeks_January-12_August-03_2018/PhreaticLevel_By_Lots-Nodes/PORVL{}N{}_portion.csv\".format(i,i-18), phreatic_level_28w_df, columns_to_export)\n",
+    "        partial_dataframe_to_csv(\"../../../../data/interim/PhreaticLevel/28-weeks_January-12_August-03_2018/1.PhreaticLevel_By_Lots-Nodes/PORVL{}N{}_portion.csv\".format(i,i-18), phreatic_level_28w_df, columns_to_export)\n",
     "        # To N4\n",
     "        columns_to_export = ['Fecha.{}'.format(i), 'Hora.{}'.format(i), 'PORVL{}N{}'.format(i,i-17)]\n",
-    "        partial_dataframe_to_csv(\"../../../../data/interim/PhreaticLevel/28-weeks_January-12_August-03_2018/PhreaticLevel_By_Lots-Nodes/PORVL{}N{}_portion.csv\".format(i,i-17), phreatic_level_28w_df, columns_to_export)\n",
+    "        partial_dataframe_to_csv(\"../../../../data/interim/PhreaticLevel/28-weeks_January-12_August-03_2018/1.PhreaticLevel_By_Lots-Nodes/PORVL{}N{}_portion.csv\".format(i,i-17), phreatic_level_28w_df, columns_to_export)\n",
     "        # To N5\n",
     "        columns_to_export = ['Fecha.{}'.format(i+1), 'Hora.{}'.format(i+1), 'PORVL{}N{}'.format(i,i-16)]\n",
-    "        partial_dataframe_to_csv(\"../../../../data/interim/PhreaticLevel/28-weeks_January-12_August-03_2018/PhreaticLevel_By_Lots-Nodes/PORVL{}N{}_portion.csv\".format(i,i-16), phreatic_level_28w_df, columns_to_export)\n",
+    "        partial_dataframe_to_csv(\"../../../../data/interim/PhreaticLevel/28-weeks_January-12_August-03_2018/1.PhreaticLevel_By_Lots-Nodes/PORVL{}N{}_portion.csv\".format(i,i-16), phreatic_level_28w_df, columns_to_export)\n",
     "    \n",
     "    elif(i==24):\n",
     "        # To N1\n",
     "        columns_to_export = ['Fecha.{}'.format(i-1), 'Hora.{}'.format(i-1), 'PORVL{}N{}'.format(i,i-23)]\n",
-    "        partial_dataframe_to_csv(\"../../../../data/interim/PhreaticLevel/28-weeks_January-12_August-03_2018/PhreaticLevel_By_Lots-Nodes/PORVL{}N{}_portion.csv\".format(i,i-23), phreatic_level_28w_df, columns_to_export)\n",
+    "        partial_dataframe_to_csv(\"../../../../data/interim/PhreaticLevel/28-weeks_January-12_August-03_2018/1.PhreaticLevel_By_Lots-Nodes/PORVL{}N{}_portion.csv\".format(i,i-23), phreatic_level_28w_df, columns_to_export)\n",
     "        # To N2\n",
     "        columns_to_export = ['Fecha.{}'.format(i), 'Hora.{}'.format(i), 'PORVL{}N{}'.format(i,i-22)]\n",
-    "        partial_dataframe_to_csv(\"../../../../data/interim/PhreaticLevel/28-weeks_January-12_August-03_2018/PhreaticLevel_By_Lots-Nodes/PORVL{}N{}_portion.csv\".format(i,i-22), phreatic_level_28w_df, columns_to_export)\n",
+    "        partial_dataframe_to_csv(\"../../../../data/interim/PhreaticLevel/28-weeks_January-12_August-03_2018/1.PhreaticLevel_By_Lots-Nodes/PORVL{}N{}_portion.csv\".format(i,i-22), phreatic_level_28w_df, columns_to_export)\n",
     "        \n",
     "        break\n",
     "        \n",
